--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,15 @@ default-features = false
 default = ["bin", "ncurses-backend"]
 bin = ["rand/std"]
 ncurses-backend = ["cursive/ncurses-backend"]
+
+[workspace]
+members = [".", "wasm"]
+default-members = ["."]
+
+[profile.dev]
+opt-level = 2
+
+[profile.release]
+codegen-units = 1
+incremental = false
+lto = true
